fix: navbar no longer covers the content after using the shortcuts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
 
     html * {
         @apply transition-all;
+        @apply scroll-mt-24;
     }
 
     h1 {
@@ -20,7 +21,7 @@
     }
 
     h3 {
-        @apply text-3xl font-medium;
+        @apply text-3xl font-medium snap-center;
     }
 
     h4 {
